--- a/admin/ui-elements.html
+++ b/admin/ui-elements.html
@@ -23,7 +23,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Dream</a>
+                <a class="navbar-brand" href="index.php">Dream</a>
             </div>
 
             <ul class="nav navbar-top-links navbar-right">
@@ -241,7 +241,7 @@
                 <ul class="nav" id="main-menu">
 
                     <li>
-                        <a href="index.html"><i class="fa fa-dashboard"></i> Dashboard</a>
+                        <a href="index.php"><i class="fa fa-dashboard"></i> Dashboard</a>
                     </li>
                     <li>
                         <a href="ui-elements.html" class="active-menu"><i class="fa fa-desktop"></i> UI Elements</a>
